--- a/UNO.html
+++ b/UNO.html
@@ -8,7 +8,7 @@
 <big>◑﹏◐</big>
 <ul>
 <li><a href="#">🔞</a></li>
-<li><a href="mailto:robiatomark14@gmail.com"></a></li>
+<li><a href="mailto:robiatomark14@gmail.com">💌</a></li>
 <li><a href="#">Next</a></li>
 </ul>
 </div>
