--- a/UNO.html
+++ b/UNO.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
+<html>
 <head>
 <title></title>
-<link rel="stylesheet"type="text/css"href="1.css">
+<link rel="stylesheet"type="text/css"href="1.css"/>
 </head>
 <body bgcolor="0f0f0f">
-<div class="navbar">
-<big>◑﹏◐</big>
+<div class="message">
 <ul>
-<li><a href="#">🔞</a></li>
 <li><a href="mailto:robiatomark14@gmail.com">💌</a></li>
-<li><a href="#">Next</a></li>
 </ul>
 </div>
 </body>
